[#46] Css Fixes on mobile screen

--- a/styles/customers.module.scss
+++ b/styles/customers.module.scss
@@ -188,6 +188,10 @@
                                 padding-bottom: 23px;
                             }
 
+                            &:nth-of-type(6) {
+                                display: none;
+                            }
+
                             .companyCustomerTableInvoiceNumber {
                                 label {
                                     display: block;
@@ -532,6 +536,10 @@
                             &:nth-of-type(1) {
                                 padding-top: 23px;
                                 padding-bottom: 23px;
+                            }
+
+                            &:nth-of-type(6) {
+                                display: none;
                             }
 
                             .companyCustomerTableInvoiceNumber {
